# cpp-playground

./: .gitignore  README.md
5words/: main.cpp
NeuralNet/: CMakeLists.txt  main.cpp  net.h  netcrtp.h
autodiff/: main.cpp
cpp-matplotlib/lib/meta/: build.py
cpp-matplotlib/stand-alone/: CMakeLists.txt  main.cpp
cpp-matplotlib/test/: CMakeLists.txt  main.cpp
crucipuzzle/: filecrucipuzzle_compact.c  filepuzzle_fun.c  schema1.txt  schema2.txt
finite-difference-metaprogramming/: finite_difference_metaprogramming.cpp
lambdas/: lambdas.cpp
lbm/: Makefile  main.cpp  plot.py
loop-unroll/: unroll.cpp
mathpresso-test/: main.cpp
mmm/: Makefile  main.cpp  test.jl  test.py
mmm/data/: aggressive.double.csv  aggressive.single.csv  release.double.csv  release.single.csv
mmm/src/: GetPot  Makefile  benchmarks.hpp  gemm.hpp  main.cpp  plot.py  run.py  tests.hpp
n-body/: main.cpp  nbody.hpp  quadtree.hpp
nbodies/: Makefile  gnuplot-iostream.h  links.txt  main.cpp  main.cpp.bak  main.cpp.bak.0  main.cpp.bak.1  main.cpp.bak.2  main.cpp.bak.plot  main.py  nbody.hpp  plot.hpp  quadtree.hpp  traits.hpp
polymorphism/: main.cpp
pow/: main.cpp
read-file/: get_file.cpp  main.cpp  matrix.coo  read.cpp  read.hpp  read_matrix.hpp  small.mtx  time_macro.hpp  timer.hpp
simd/: main.cpp  main.s
steinhaus-book/: problem7.cpp
struct-vs-tuple/: main.cpp
sudoku/: SudokuCauto.c  avanzato  brutale  facile  pieno  sudoku.c  sudoku.hpp  sudoku1.txt  sudoku_data.cpp  sudoku_online.cpp  timer.hpp
sudoku/sudoku/: connectivityinfo.cpp  hardest.txt  main.cpp  sudoku.cpp  sudoku.hpp
testCRTP/: CMakeLists.txt  main.cpp
(+2 files in other folders)
